# DGCU_GPA_Calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets/: rc.qrc  rc.rc
installer/config/: config.xml
src/: App.cpp  App.h  App.ui
